Css Href Fix - SecurityConfig[En proceso]

--- a/src/main/resources/templates/administradores/gestionPolizas.html
+++ b/src/main/resources/templates/administradores/gestionPolizas.html
@@ -6,7 +6,7 @@
   <title>Pólizas - SeguriPlus</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../style.administradores/gestionPolizas.css"/>
+  <link rel="stylesheet" href="../../static/administradores/gestionPolizas.css"/>
 </head>
 
 <body>
