--- a/src/main/resources/templates/administradores/informes.html
+++ b/src/main/resources/templates/administradores/informes.html
@@ -6,7 +6,7 @@
   <title>Informes - SeguriPlus</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../style.administradores/informes.css"/>
+  <link rel="stylesheet" href="../../static/administradores/informes.css"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
