--- a/src/main/resources/templates/administradores/registroSeguros.html
+++ b/src/main/resources/templates/administradores/registroSeguros.html
@@ -6,7 +6,7 @@
   <title>Gestión de Seguros - SeguriPlus</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../style.administradores/registroSeguros.css" />
+  <link rel="stylesheet" href="../../static/administradores/registroSeguros.css" />
 </head>
 
 <body>
