--- a/src/main/resources/templates/clientes/contacto.html
+++ b/src/main/resources/templates/clientes/contacto.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contacto - SeguriPlus</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../style.usuario/contacto.css" />
+  <link rel="stylesheet" href="../../static/usuarios/contacto.css" />
 </head>
 
 <body>
