--- a/src/main/resources/templates/clientes/loginUsuarios.html
+++ b/src/main/resources/templates/clientes/loginUsuarios.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SeguriPlus - Login</title>
-  <link rel="stylesheet" href="../../static/usuarios/loginUsuarios.css" />
+  <link rel="stylesheet" th:href="@{/css/usuarios/loginUsuarios.css}" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body class="login-body">
@@ -17,12 +17,15 @@
       <h1>SegurApp</h1>
       <h2>Usuarios</h2>
     </div>
+      
     <form class="login-form">
       <input type="text" placeholder="Usuario" required />
       <input type="password" placeholder="Contraseña" required />
       <button type="submit"><a href="dashboard.html">Ingresar</a></button>
-      <button type="submit"><a href="loginAdmi.html">Ingreso Administradores</a></button>
+      <a th:href="@{../administradores/loginAdministrador}"><button type="button">   Ingreso Administradores   </button></a>
+      <a th:href="@{../}"><button type="button" >                                Regresar al Inicio         </button></a>   
     </form>
+
   </div>
 </body>
 </html>
