--- a/src/main/resources/templates/clientes/registroUsuario.html
+++ b/src/main/resources/templates/clientes/registroUsuario.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Registro - SeguriPlus</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../static/usuarios/registroUsuarios.css" />
+  <link rel="stylesheet" th:href="@{/css/usuarios/registroUsuario.css}" />
 </head>
 
 <body>
@@ -36,7 +36,10 @@
       <input type="password" name="password2" required/>
 
       <button type="submit">Registrarse</button>
-      <p class="link">¿Ya tienes cuenta? <a href="index.html">Inicia sesión aquí</a></p>
+      <p class="link">¿Ya tienes cuenta?
+      <a th:href="@{../clientes/loginUsuarios}"><button type="button">   Ingreso Administradores   </button></a>
+      <a th:href="@{../}"><button type="button" >                                Regresar al Inicio         </button></a>   
+      </p>
     </form>
   </div>
 
