--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SeguriPlus - Agencia de Seguros</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet"  th:href="@{/style.css}"> <!-- href="../template/style.css" CSS Incompatible con SpringBoot-->
+  <link rel="stylesheet"  th:href="@{/css/style.css}"> <!-- href="../template/style.css" CSS Incompatible con SpringBoot-->
 </head>
 
 <body>
@@ -19,8 +19,8 @@
       <h1>SegurApp</h1>
     </div>
     <nav class="nav-buttons">
-      <a href="index.html" class="btn-login">Iniciar sesión</a>
-      <a href="registro.html" class="btn-register">Registrarse</a>
+      <a th:href="@{clientes/loginUsuarios}" class="btn-login">Iniciar sesión</a>
+      <a th:href="@{clientes/registroUsuario}" class="btn-register">Registrarse</a>
     </nav>
   </header>
 
