--- a/src/main/resources/templates/clientes/registroUsuario.html
+++ b/src/main/resources/templates/clientes/registroUsuario.html
@@ -36,10 +36,10 @@
       <input type="password" name="password2" required/>
 
       <button type="submit">Registrarse</button>
-      <p class="link">¿Ya tienes cuenta?
-      <a th:href="@{../clientes/loginUsuarios}"><button type="button">   Ingreso Administradores   </button></a>
+      <p class="link">¿Ya tienes cuenta? </p>
+      <a th:href="@{../clientes/loginUsuarios}"><button type="button">   Ingreso Usuarios   </button></a>
       <a th:href="@{../}"><button type="button" >                                Regresar al Inicio         </button></a>   
-      </p>
+      
     </form>
   </div>
 
