--- a/src/main/resources/templates/clientes/registroUsuario.html
+++ b/src/main/resources/templates/clientes/registroUsuario.html
@@ -43,6 +43,6 @@
     </form>
   </div>
 
-  <script src="../js/registroUsuario.js"></script>
+  <script th:src="@{/js/registroUsuario.js}"></script>
 </body>
 </html>
