--- a/src/main/resources/templates/administradores/gestionPolizas.html
+++ b/src/main/resources/templates/administradores/gestionPolizas.html
@@ -6,7 +6,7 @@
   <title>Pólizas - SeguriPlus</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../static/administradores/gestionPolizas.css"/>
+  <link rel="stylesheet" href="../../static/administradores/gestionPolizas.css" />
 </head>
 
 <body>
@@ -140,6 +140,6 @@
   </footer>
 
 
-  <script src="../js/gestionPolizas"></script>
+  <script th:src="@{/js/gestionPolizas.js}"></script>
 </body>
 </html>
