--- a/src/main/resources/templates/clientes/ayuda.html
+++ b/src/main/resources/templates/clientes/ayuda.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ayuda - SeguriPlus</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../static/usuarios/ayuda.css" />
+  <link rel="stylesheet" th:href="@{/css/usuarios/ayuda.css}" />
 </head>
 
 <body>
@@ -68,6 +68,6 @@
     <a href="logout.html">Cerrar sesión</a>
   </footer>
 
-  <script src="../js/ayuda.js"></script>
+  <script th:src="@{/js/ayuda.js}"></script>
 </body>
 </html>
