--- a/src/main/resources/templates/clientes/pagosUsuarios.html
+++ b/src/main/resources/templates/clientes/pagosUsuarios.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pagar Póliza - SeguriPlus</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../static/usuarios/pagosUsuarios.css" />
+  <link rel="stylesheet" th:href="@{/css/usuarios/pagosUsuarios.css}" />
 </head>
 
 <body>
@@ -81,6 +81,6 @@
     <a href="pagoPolizas.html" class="active">Pagar</a>
   </footer>
 
-  <script src="../js/pagosUsuarios.js"></script>
+  <script th:src="@{/js/pagosUsuarios.js}"></script>
 </body>
 </html>
