--- a/src/main/resources/templates/clientes/polizasUsuarios.html
+++ b/src/main/resources/templates/clientes/polizasUsuarios.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mis Pólizas - SeguriPlus</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../static/usuarios/polizasUsuarios.css" />
+  <link rel="stylesheet" th:href="@{/css/usuarios/polizasUsuarios.css}"/>
 </head>
 
 <body>
@@ -72,6 +72,6 @@
     <a href="pagoPolizas.html">Pagar</a>
   </footer>
 
-  <script src="../js/polizasUsuarios.js"></script>
+  <script th:src="@{/js/polizasUsuarios.js}"></script>
 </body>
 </html>
