--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,8 +88,8 @@
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 SeguriPlus. Todos los derechos reservados.</p>
-      <p>Contacto: info@seguriplus.com | Tel: +54 9 381 555-1234</p>
+      <p>&copy; 2025 SegurApp. Todos los derechos reservados.</p>
+      <p>Contacto: info@SegurApp.com | Tel: +12 3 381 555-1234</p>
     </div>
   </footer>
 
