--- a/src/main/resources/templates/clientes/registroUsuario.html
+++ b/src/main/resources/templates/clientes/registroUsuario.html
@@ -19,7 +19,7 @@
     </div>
 
     <h2>Crea tu cuenta</h2>
-    <form id="registroForm">
+    <form id="registroUserForm">
       <label>Nombre completo</label>
       <input type="text" name="nombre" required/>
 
@@ -36,11 +36,11 @@
       <input type="password" name="password2" required/>
 
       <button type="submit">Registrarse</button>
-      <p class="link">¿Ya tienes cuenta? </p>
+    </form>
+    <p class="link">¿Ya tienes cuenta? </p>
       <a th:href="@{../clientes/loginUsuarios}"><button type="button">   Ingreso Usuarios   </button></a>
       <a th:href="@{../}"><button type="button" >                                Regresar al Inicio         </button></a>   
       
-    </form>
   </div>
 
   <script th:src="@{/js/registroUsuario.js}"></script>
