--- a/src/main/resources/templates/administradores/dashboard.html
+++ b/src/main/resources/templates/administradores/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard - SeguriPlus</title>
-  <link rel="stylesheet"  th:href="@{/css/styles.css}" />
+  <link rel="stylesheet"  th:href="@{/css/administradores/loginAdministrador.css}" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body class="dashboard-body">
@@ -14,11 +14,13 @@
         <circle cx="50" cy="50" r="40" fill="#005f99"/>
         <text x="50" y="60" text-anchor="middle" fill="white" font-size="40" font-family="Roboto" font-weight="bold">S+</text>
       </svg>
-      <h2>SeguriPlus</h2>
+      <h2>SegurApp</h2>
     </div>
     <div class="header-right">
       <span>Bienvenido, <strong>Usuario</strong></span>
-      <a href="#">Cerrar sesión</a>
+      <form th:action="@{/perform_logout}" method="post">
+            <input type="submit" value="Cerrar sesión" />
+        </form>
     </div>
   </header>
 
@@ -67,7 +69,9 @@
     <a th:href="@{dashboard.html}">Inicio</a>
     <a th:href="@{ayuda.html}">Ayuda</a>
     <a th:href="@{contacto.html}">Contacto</a>
-    <a th:href="@{logout.html}">Cerrar sesión</a>
+    <form th:action="@{/perform_logout}" method="post">
+    <input type="submit" value="Cerrar sesión" />
+    </form>
   </footer>
 </body>
 </html>
