--- a/src/main/resources/templates/clientes/loginUsuarios.html
+++ b/src/main/resources/templates/clientes/loginUsuarios.html
@@ -3,29 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SeguriPlus - Login</title>
+  <title>SegurApp - Login</title>
   <link rel="stylesheet" th:href="@{/css/usuarios/loginUsuarios.css}" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body class="login-body">
-  <div class="login-container">
-    <div class="logo">
-      <svg width="80" height="80" viewBox="0 0 100 100">
-        <circle cx="50" cy="50" r="40" fill="#005f99"/>
-        <text x="50" y="60" text-anchor="middle" fill="white" font-size="40" font-family="Roboto" font-weight="bold"></text>
-      </svg>
-      <h1>SegurApp</h1>
-      <h2>Usuarios</h2>
-    </div>
+    <div class="login-container">
+        <div class="logo">
+            <svg width="80" height="80" viewBox="0 0 100 100">
+                <circle cx="50" cy="50" r="40" fill="#005f99"/>
+                <text x="50" y="60" text-anchor="middle" fill="white" font-size="40" font-family="Roboto" font-weight="bold"></text>
+            </svg>
+            <h1>SegurApp</h1>
+            <h2>Inicio de sesión</h2>
+        </div>
       
-    <form class="login-form">
-      <input type="text" placeholder="Usuario" required />
-      <input type="password" placeholder="Contraseña" required />
-      <button type="submit"><a th:href="@{/clientes/dashboard}">Ingresar</a></button>
-      <a th:href="@{../administradores/loginAdministrador}"><button type="button">   Ingreso Administradores   </button></a>
-      <a th:href="@{../}"><button type="button" >                                Regresar al Inicio         </button></a>   
+    <form th:action="@{/perform_login}" method="post" class="login-form">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" >
+        <label><h2>Email:</h2></label>
+        <input type="email" name="email" required>
+        <label><h2>Contraseña:<h2></label>
+        <input type="password" name="password" required>
+        <button type="submit">Iniciar sesión</button>
     </form>
 
-  </div>
+    <a th:href="@{../}"><button type="button" >Regresar al Inicio</button></a>   
+    </div>
 </body>
 </html>
