--- a/src/main/resources/templates/clientes/pagosUsuarios.html
+++ b/src/main/resources/templates/clientes/pagosUsuarios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pagar Póliza - SeguriPlus</title>
+  <title>Pagar Póliza - SeguriApp</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/usuarios/pagosUsuarios.css}" />
 </head>
