--- a/src/main/resources/templates/clientes/registroUsuario.html
+++ b/src/main/resources/templates/clientes/registroUsuario.html
@@ -57,6 +57,6 @@
       
   </div>
 
-  <script th:src="@{/js/registroUsuario.js}"></script>
+ <!-- <script th:src="@{/js/registroUsuario.js}"></script>-->
 </body>
 </html>
