Fusion del proyecto

--- a/src/main/resources/static/css/usuarios/polizasUsuarios.css
+++ b/src/main/resources/static/css/usuarios/polizasUsuarios.css
@@ -7,8 +7,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Author     : Dell
 */
 :root{
-  --pri: #5a3a8a;
-  --pri-osc: #402a66;
+  --pri: #00796b;
+  --pri-osc: #004c40;
   --fondo: #f4f6f8;
   --blanco: #ffffff;
   --sombra: 0 2px 8px rgba(0,0,0,.15);
