--- a/src/main/resources/templates/clientes/dashboard.html
+++ b/src/main/resources/templates/clientes/dashboard.html
@@ -3,40 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard - SeguriPlus</title>
-  <link rel="stylesheet" th:href="@{/css/usuarios/loginUsuarios.css}" />
+  <title>Dashboard - SegurApp</title>
+  <link rel="stylesheet" th:href="@{/css/usuarios/compraSeguros.css}" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body class="dashboard-body">
-  <header>
-    <div class="header-left">
-      <svg width="40" height="40" viewBox="0 0 100 100">
-        <circle cx="50" cy="50" r="40" fill="#005f99"/>
-        <text x="50" y="60" text-anchor="middle" fill="white" font-size="40" font-family="Roboto" font-weight="bold">S+</text>
-      </svg>
-      <h2>SeguriPlus</h2>
-    </div>
-    <div class="header-right">
-      <span>Bienvenido, <strong>Usuario</strong></span>
-            <form th:action="@{/perform_logout}" method="post">
-          <input type="submit" value="Cerrar sesión" />
-      </form>
-    </div>
-  </header>
-
   <aside class="sidebar">
     <nav>
       <ul>
-        <li><a th:href="@{seguros}">Gestión de Seguros</a></li>
-        <li><a th:href="@{clientes}">Gestión de Clientes</a></li>
-        <li><a th:href="@{polizas}">Gestión de Pólizas</a></li>
-        <li><a th:href="@{pagos}">Gestión de Pagos</a></li>
-        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+        <li><a th:href="@{compraSeguros}">Comprar seguros</a></li>
+        <li><a th:href="@{polizasUsuarios}">Gestionar seguros</a></li>
+        <li><a th:href="@{pagosUsuarios}">Gestión de Pagos</a></li>
+        <li><a th:href="@{contacto}">Contacto</a></li>
       </ul>
     </nav>
   </aside>
 
   <main class="content">
+    <header style="justify-items: baseline">
+        <div class="header-left">
+          <svg width="40" height="40" viewBox="0 0 100 100">
+            <circle cx="50" cy="50" r="40" fill="#005f99"/>
+            <text x="50" y="60" text-anchor="middle" fill="white" font-size="40" font-family="Roboto" font-weight="bold">S+</text>
+          </svg>
+          <h2>SegurApp</h2>
+        </div>
+        <div class="header-right">
+          <span>Bienvenido, <strong>Usuario</strong></span>
+                <form th:action="@{/perform_logout}" method="post">
+              <input type="submit" value="Cerrar sesión" />
+          </form>
+        </div>
+    </header>
     <h3>Gestión de Seguros</h3>
     <button class="btn-primary"><a th:href="@{seguros}">Nuevo seguro</a></button>
     <table>
@@ -66,9 +64,9 @@
   </main>
 
   <footer class="bottom-nav">
-    <a th:href="@{dashboard.html}">Inicio</a>
-    <a th:href="@{ayuda.html}">Ayuda</a>
-    <a th:href="@{contacto.html}">Contacto</a>
+    <a th:href="@{dashboard}">Inicio</a>
+    <a th:href="@{ayuda}">Ayuda</a>
+    <a th:href="@{contacto}">Contacto</a>
     <form th:action="@{/perform_logout}" method="post">
         <input type="submit" value="Cerrar sesión" />
     </form>  
