--- a/src/main/resources/templates/clientes/pagosUsuarios.html
+++ b/src/main/resources/templates/clientes/pagosUsuarios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pagar Póliza - SeguriApp</title>
+  <title>Pagar Póliza - SegurApp</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/usuarios/pagosUsuarios.css}" />
 </head>
@@ -11,13 +11,12 @@
 <body>
   <aside class="sidebar">
     <nav>
-      <ul>
-        <li><a href="dashboard.html">Dashboard</a></li>
-        <li><a href="CompraSeguros.html">Tienda</a></li>
-        <li><a href="UsuariosPolizas.html">Mis pólizas</a></li>
-        <li><a href="pagoPolizas.html" class="active">Pagar póliza</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="ayuda.html">Ayuda</a></li>
+      <ul>  
+        <li><a th:href="@{dashboard}">Inicio</a></li>
+        <li><a th:href="@{compraSeguros}">Comprar seguros</a></li>
+        <li><a th:href="@{polizasUsuarios}">Gestionar seguros</a></li>
+        <li><a th:href="@{pagosUsuarios}">Gestión de Pagos</a></li>
+        <li><a th:href="@{contacto}">Contacto</a></li>
       </ul>
     </nav>
   </aside>
@@ -26,7 +25,7 @@
   <main class="content">
     <header class="top-bar">
       <h1>Pagar póliza</h1>
-      <a href="dashboard.html">Volver al Dashboard</a>
+      <a th:href="@{dashboard}">Regresar al inicio</a>
     </header>
 
 
@@ -75,10 +74,12 @@
   </main>
 
   <footer class="bottom-nav">
-    <a href="dashboard.html">Inicio</a>
-    <a href="CompraSeguros.html">Tienda</a>
-    <a href="misPolizas.html">Mis pólizas</a>
-    <a href="pagoPolizas.html" class="active">Pagar</a>
+    <a th:href="@{dashboard}">Inicio</a>
+    <a th:href="@{ayuda}">Ayuda</a>
+    <a th:href="@{contacto}">Contacto</a>
+    <form th:action="@{/perform_logout}" method="post">
+        <input type="submit" value="Cerrar sesión" />
+    </form>  
   </footer>
 
   <script th:src="@{/js/pagosUsuarios.js}"></script>
